# ChangeLog for media-video/ogmrip
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ChangeLog,v 1.12 2006/10/23 05:22:55 beandog Exp $

*ogmrip-0.10.0 (23 Oct 2006)

  23 Oct 2006; Steve Dibb <beandog@gentoo.org> +ogmrip-0.10.0.ebuild:
  Version bump, bug 152395, thanks to Olivier Rolland <billl@users.sf.net>

*ogmrip-0.10.0_rc4 (23 Oct 2006)

  23 Oct 2006; Steve Dibb <beandog@gentoo.org>
  -files/ogmrip-0.9.0-gcc4.patch, -files/ogmrip-0.9.0-lang.patch,
  -files/ogmrip-0.9.0-mplayercvs.patch, -files/ogmrip-0.9.0-types.patch,
  +files/ogmrip-0.10.0_rc4-amd64.patch, +ogmrip-0.10.0_rc4.ebuild:
  Version bump, remove old patches

  08 Oct 2006; Markus Rothe <corsair@gentoo.org> ogmrip-0.10.0_rc3.ebuild:
  Added ~ppc64

  05 Oct 2006; Steve Dibb <beandog@gentoo.org> metadata.xml,
  -ogmrip-0.9.0-r1.ebuild:
  Remove old p.masked version, add upstream maintainer to metadata

  01 Sep 2006; Stefan Schweizer <genstef@gentoo.org>
  ogmrip-0.10.0_rc3.ebuild:
  gtk2 -> gtk, bug 106560

  30 Aug 2006; Matthias Schwarzott <zzam@gentoo.org> ogmrip-0.9.0-r1.ebuild:
  Applied patch from Bug #142203 to now use built_with_use for checking
  mplayer-caps.

*ogmrip-0.10.0_rc3 (20 Aug 2006)

  20 Aug 2006; beandog +ogmrip-0.10.0_rc3.ebuild:
  Version bump, thanks to Olivier Rolland <billl at users dot sf dot .net> 
  for the ebuild

  07 Jul 2006; Lars Weiler <pylon@gentoo.org> metadata.xml:
  Handing over the package to the video herd.

  02 Jun 2006; Stefan Briesenick <sbriesen@gentoo.org>
  +files/ogmrip-0.9.0-types.patch, ogmrip-0.9.0-r1.ebuild:
  Add patch to allow building against latest libdvdread. Bug #135036.

*ogmrip-0.9.0-r1 (25 Mar 2006)

  25 Mar 2006; Luis Medinas <metalgod@gentoo.org>
  +files/ogmrip-0.9.0-mplayercvs.patch, +ogmrip-0.9.0-r1.ebuild:
  Added a fix to run with mplayer cvs thanks to Alexis Ballier
  <alexis.ballier@gmail.com>.

  17 Sep 2005; Luis Medinas <metalgod@gentoo.org>