@@ -1,10 +1,10 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ogmrip-0.10.0.ebuild,v 1.1 2006/10/23 05:22:55 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ogmrip-0.10.0.ebuild,v 1.2 2006/10/23 14:27:39 beandog Exp $
 
 inherit gnome2 eutils
 
-DESCRIPTION="Graphical frontend and libraries for ripping DVDs and encoding to AVI/OGM/MKV"
+DESCRIPTION="Graphical frontend and libraries for ripping DVDs and encoding to AVI/OGM/MKV/MP4"
 HOMEPAGE="http://ogmrip.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 LICENSE="LGPL-2.1"
