@@ -1,13 +1,13 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ogmrip-0.10.0_rc3.ebuild,v 1.3 2006/10/08 13:03:48 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ogmrip-0.10.0_rc3.ebuild,v 1.4 2006/10/23 14:27:39 beandog Exp $
 
 inherit gnome2 eutils
 
 MY_P=${P/_rc/-rc}
 S=${WORKDIR}/${MY_P}
 
-DESCRIPTION="Application and libraries for encoding DVDs into AVI/OGM/MKV files"
+DESCRIPTION="Graphical frontend and libraries for ripping DVDs and encoding to AVI/OGM/MKV/MP4"
 HOMEPAGE="http://ogmrip.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.gz"
 LICENSE="LGPL-2.1"
