@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ogmrip
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ChangeLog,v 1.12 2006/10/23 05:22:55 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogmrip/ChangeLog,v 1.13 2006/10/23 14:27:39 beandog Exp $
+
+  23 Oct 2006; Steve Dibb <beandog@gentoo.org> ogmrip-0.10.0_rc3.ebuild,
+  ogmrip-0.10.0_rc4.ebuild, ogmrip-0.10.0.ebuild:
+  Update description
 
 *ogmrip-0.10.0 (23 Oct 2006)
 
